force-app/main/default/objects/CheckIn__c/CheckIn__c.object-meta.xml
<CustomObject>
    <label>CheckIn</label>
    <nameField>
        <label>CheckIn Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CheckIn</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>