force-app/main/default/objects/CheckIn__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CheckIn</relationshipLabel>
    <relationshipName>CheckIn</relationshipName>
    <type>Lookup</type>
</CustomField>