force-app/main/default/objects/CheckIn__c/fields/CheckIn_date__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>CheckIn date</label>
    <type>Date</type>
</CustomField>